codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__cyber_model_full_access_confirmation_popup_approve_for_me.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Enable full access?

  When Codex runs with full access, it can edit any file on your computer and
  run commands with network, without your approval.

  Cyber models carry a higher risk of dangerous actions. Ensure proper
  safeguards are in place before granting full access. We strongly recommend
  selecting "Approve for me" instead, and customizing the reviewer policy for
  your use case.


› 1. Yes, continue anyway  Apply full access for this session
  2. Cancel                Go back without enabling full access

  enter select · esc back
