codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__direct_budget_limited_turn_message.snap
---
source: tui/src/chatwidget/tests/interrupts.rs
expression: last
---
■ Goal budget reached - the turn was stopped.
